--- a/header.html
+++ b/header.html
@@ -1,7 +1,13 @@
-<div class="header">
-  <h1 class="game-title">
-    <i class="fa-solid fa-mask"></i> Crime Lords
-  </h1>
-  <p class="tagline">Rise to Power. Rule the Streets.</p>
-  <div class="header-line"></div>
-</div>
+<header>
+  <h1>🕶️ Crime Lords</h1>
+
+  <nav class="navbar" id="nav-bar">
+    <a href="index.html"><i class="fa-solid fa-house"></i> Home</a>
+    <a href="missions.html"><i class="fa-solid fa-gun"></i> Missions</a>
+    <a href="profile.html"><i class="fa-solid fa-user"></i> Profile</a>
+    <a href="shop.html"><i class="fa-solid fa-store"></i> Shop</a>
+    <a href="faction.html"><i class="fa-solid fa-people-group"></i> Factions</a>
+    <a href="jail.html"><i class="fa-solid fa-gavel"></i> Jail</a>
+    <a href="leaderboard.html"><i class="fa-solid fa-ranking-star"></i> Leaderboard</a>
+  </nav>
+</header>
