--- a/faction.html
+++ b/faction.html
@@ -9,97 +9,74 @@
 </head>
 <body>
   <div class="container glassmorphic">
-    
+
+    <!-- Header with nav will be loaded -->
     <div id="header-placeholder"></div>
 
     <section class="factions">
       <h2><i class="fa-solid fa-people-group"></i> Factions</h2>
 
       <div class="faction-box">
-        <p><strong>Your Faction:</strong> <span id="current-faction">None</span></p>
-      </div>
-
-      <div class="faction-box">
-        <h3>Create a New Faction</h3>
-        <input type="text" id="new-faction-name" placeholder="Enter faction name">
+        <h3>Create a Faction</h3>
+        <input type="text" id="newFactionName" placeholder="Enter faction name" />
         <button onclick="createFaction()">Create</button>
       </div>
 
       <div class="faction-box">
-        <h3>Join an Existing Faction</h3>
-        <select id="faction-list">
-          <option value="" disabled selected>Select a faction</option>
-        </select>
+        <h3>Join a Faction</h3>
+        <input type="text" id="joinFactionName" placeholder="Enter faction name to join" />
         <button onclick="joinFaction()">Join</button>
       </div>
-    </section>
 
-    <div id="navbar-placeholder"></div>
+      <div class="faction-box" id="factionStatus">
+        <!-- Will show current faction info -->
+      </div>
+    </section>
   </div>
 
   <script src="script.js"></script>
-
   <script>
-    // Load saved data or create empty
-    const factionList = JSON.parse(localStorage.getItem("factions")) || [];
-    const factionSelect = document.getElementById("faction-list");
-    const currentFaction = localStorage.getItem("currentFaction") || "None";
-    document.getElementById("current-faction").textContent = currentFaction;
-
-    function updateDropdown() {
-      factionSelect.innerHTML = '<option value="" disabled selected>Select a faction</option>';
-      factionList.forEach(name => {
-        const opt = document.createElement("option");
-        opt.value = name;
-        opt.textContent = name;
-        factionSelect.appendChild(opt);
-      });
-    }
-
-    function createFaction() {
-      const name = document.getElementById("new-faction-name").value.trim();
-      if (name === "") {
-        alert("Please enter a valid faction name.");
-        return;
-      }
-      if (factionList.includes(name)) {
-        alert("That faction already exists.");
-        return;
-      }
-      factionList.push(name);
-      localStorage.setItem("factions", JSON.stringify(factionList));
-      localStorage.setItem("currentFaction", name);
-      document.getElementById("current-faction").textContent = name;
-      updateDropdown();
-      alert(`Faction "${name}" created and joined!`);
-    }
-
-    function joinFaction() {
-      const selected = factionSelect.value;
-      if (!selected) {
-        alert("Please select a faction.");
-        return;
-      }
-      localStorage.setItem("currentFaction", selected);
-      document.getElementById("current-faction").textContent = selected;
-      alert(`You joined "${selected}"`);
-    }
-
-    // Load dropdown on page ready
-    updateDropdown();
-
-    // Load header and navbar
+    // Load header and activate nav
     fetch("header.html")
       .then(res => res.text())
       .then(data => {
         document.getElementById("header-placeholder").innerHTML = data;
+        const currentPage = window.location.pathname.split("/").pop();
+        document.querySelectorAll("#nav-bar a").forEach(link => {
+          if (link.getAttribute("href") === currentPage) {
+            link.classList.add("active");
+          }
+        });
       });
 
-    fetch("navbar.html")
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById("navbar-placeholder").innerHTML = data;
-      });
+    // Faction management using localStorage
+    function createFaction() {
+      const name = document.getElementById("newFactionName").value.trim();
+      if (name === "") return alert("Enter a faction name.");
+      localStorage.setItem("faction", name);
+      updateFactionStatus();
+      alert("Faction created successfully!");
+    }
+
+    function joinFaction() {
+      const name = document.getElementById("joinFactionName").value.trim();
+      if (name === "") return alert("Enter a faction name.");
+      localStorage.setItem("faction", name);
+      updateFactionStatus();
+      alert("You joined the faction!");
+    }
+
+    function updateFactionStatus() {
+      const faction = localStorage.getItem("faction");
+      const box = document.getElementById("factionStatus");
+      if (faction) {
+        box.innerHTML = `<p><strong>You belong to:</strong> ${faction}</p>`;
+      } else {
+        box.innerHTML = `<p><em>You're not in any faction.</em></p>`;
+      }
+    }
+
+    updateFactionStatus();
   </script>
 </body>
 </html>
