--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
-<header>
-  <h1>🕶️ Crime Lords</h1>
+<header class="site-header">
+  <h1 class="game-title">🕶 Crime Lords</h1>
 
   <nav class="navbar" id="nav-bar">
     <a href="index.html"><i class="fa-solid fa-house"></i> Home</a>
